syntax = "proto3";

package pkg.repo.repopb;

option go_package = "repopb";
option java_multiple_files = true;
option java_outer_classname = "Repo1Proto";
option java_package = "com.pkg.repo.repopb";

message Repo{
    bool Enabled = 1;
    bytes FingerPrint = 2;
    string NamespaceID = 3;
}

message GetRequest{
    string id = 1;
}

message GetResponse{
    Repo repo = 1;
}

message SetDeviceStateRequest{
    string id = 1;
    Repo repo = 2;
}
message SetDeviceStateResponse{
    bool status = 1;
}

message DeleteDeviceStateRequest{
    string id =1;
}
message DeleteDeviceStateResponse{
    bool status = 1;
}

message UpdateDeviceStateRequest{
    string id = 1;
    Repo repo = 2;
}

message UpdateDeviceStateResponse{
    bool status = 1;
}

service Repos{
    rpc Get(GetRequest) returns (GetResponse);
    rpc SetDeviceState(SetDeviceStateRequest) returns (SetDeviceStateResponse);
    rpc DeleteDeviceState(DeleteDeviceStateRequest) returns (DeleteDeviceStateResponse);
}